<resources>
    <string name="app_name">Reportr</string>
    <string name="marquee_trending">Trending:</string>

    <string name="temp_news_hours">8 hours ago</string>
    <string name="news_source">BBC News</string>
    <string name="temp_newsdate">24th december, 2018</string>
    <string name="temp_newstitle">Working as an Android developer can be extremely rewarding. It can also be extremely
challenging, especially when you are just getting started.</string>

    <string name="search_news">Search News</string>
    <string name="select_country">Country</string>
    <string name="read_news_anytime_anywhere">Read news anytime, anywhere</string>
    <string name="nav_drawer_open">Drawer Open</string>
    <string name="nav_drawer_close">Drawer Close</string>
    <string name="version_2_0">App Version 2.0.1</string>
    <string name="marquee_newsParseError">Error getting News Headlines from the Web.</string>
    <string name="marquee_error">Error loading News Headlines.</string>
    <string name="menu_action_fav">favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="description">\"Reportr\", a simple and useful NewsFeed app to deliver you latest news across the world from 50,000+ News sources of 50+ countries, provided by \"newsapi.org\". It also includes many features like Save News, Search News, Read News Detail and more.</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="saved_news">Saved News</string>
    <string name="menu_actions">Actions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
